name:                cloud
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bwalkowi/cloud#readme
license:             BSD3
license-file:        LICENSE
author:              Bartosz Walkowicz
maintainer:          wallko1@hotmail.com
copyright:           Copyright: (c) 2017 Bartosz Walkowicz
category:            Concurrent
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable cloud-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cloud
  default-language:    Haskell2010

test-suite cloud-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cloud
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bwalkowi/cloud
