name:                librbt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bwalkowi/cloud#readme
license:             BSD3
license-file:        LICENSE
author:              Bartosz Walkowicz
maintainer:          wallko1@hotmail.com
copyright:           Copyright: (c) 2017 Bartosz Walkowicz
category:            Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RBT, Map
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable rbt-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , librbt
  default-language:    Haskell2010

test-suite rbt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , librbt
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bwalkowi/RBT
